[gd_scene load_steps=4 format=3 uid="uid://c8xvd0qfxvd0kq7"]

[ext_resource type="Script" path="res://scenes/game/GameScreen.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/game/power_meter.gd" id="2_power"]
[ext_resource type="Script" path="res://scripts/game/slap_controller.gd" id="3_slap"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.25, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 1200)

[node name="AvatarContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -600.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvatarBody" type="ColorRect" parent="AvatarContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.6, 0.8, 1)

[node name="BodyLabel" type="Label" parent="AvatarContainer/AvatarBody"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "üëï"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvatarHead" type="ColorRect" parent="AvatarContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -150.0
offset_right = 120.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.85, 0.7, 1)

[node name="Face" type="Label" parent="AvatarContainer/AvatarHead"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "üòê"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageOverlay" type="ColorRect" parent="AvatarContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.3)

[node name="PowerMeter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -450.0
offset_right = 400.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_power")

[node name="Background" type="ColorRect" parent="PowerMeter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="Title" type="Label" parent="PowerMeter"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "‚ö° PUISSANCE ‚ö°"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeterBar" type="ColorRect" parent="PowerMeter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 10.0
offset_right = 350.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="PerfectZone" type="ColorRect" parent="PowerMeter/MeterBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 315.0
offset_top = -35.0
offset_right = 385.0
offset_bottom = 35.0
grow_vertical = 2
color = Color(0, 1, 0, 0.6)

[node name="GoodZoneLeft" type="ColorRect" parent="PowerMeter/MeterBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 245.0
offset_top = -35.0
offset_right = 315.0
offset_bottom = 35.0
grow_vertical = 2
color = Color(0.5, 1, 0, 0.4)

[node name="GoodZoneRight" type="ColorRect" parent="PowerMeter/MeterBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 385.0
offset_top = -35.0
offset_right = 455.0
offset_bottom = 35.0
grow_vertical = 2
color = Color(0.5, 1, 0, 0.4)

[node name="OkZoneLeft" type="ColorRect" parent="PowerMeter/MeterBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = -35.0
offset_right = 245.0
offset_bottom = 35.0
grow_vertical = 2
color = Color(1, 1, 0, 0.3)

[node name="OkZoneRight" type="ColorRect" parent="PowerMeter/MeterBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 455.0
offset_top = -35.0
offset_right = 525.0
offset_bottom = 35.0
grow_vertical = 2
color = Color(1, 1, 0, 0.3)

[node name="Cursor" type="ColorRect" parent="PowerMeter/MeterBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 40.0
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="CursorGlow" type="ColorRect" parent="PowerMeter/MeterBar/Cursor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -50.0
offset_right = 25.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.3)

[node name="InstructionLabel" type="Label" parent="PowerMeter"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -140.0
offset_right = 300.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Pr√™t pour le prochain coup"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlapController" type="Node2D" parent="."]
script = ExtResource("3_slap")

[node name="Hand" type="ColorRect" parent="SlapController"]
visible = false
offset_left = 800.0
offset_top = 280.0
offset_right = 900.0
offset_bottom = 380.0
color = Color(1, 0.8, 0.6, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlapController"]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LeftInfo" type="VBoxContainer" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer/LeftInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üíØ Score: 0"

[node name="CoinsLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer/LeftInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üí∞ Pi√®ces: 100"

[node name="RightInfo" type="VBoxContainer" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="HealthLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer/RightInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "‚ù§Ô∏è Sant√©: 100"
horizontal_alignment = 2

[node name="HealthBar" type="ProgressBar" parent="UI/TopBar/MarginContainer/HBoxContainer/RightInfo"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="FeedbackLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -400.0
offset_right = 200.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedbackTimer" type="Timer" parent="UI/FeedbackLabel"]
wait_time = 1.0
one_shot = true

[node name="BottomPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -500.0
grow_horizontal = 2
grow_vertical = 0

[node name="SlapButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "GIFLE ! üëã"

[node name="StatusLabel" type="Label" parent="UI/BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Pr√™t pour le prochain coup"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -580.0
offset_right = 230.0
offset_bottom = -520.0
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "‚Üê Menu"

[connection signal="timeout" from="UI/FeedbackLabel/FeedbackTimer" to="." method="_on_feedback_timeout"]
[connection signal="pressed" from="UI/BottomPanel/SlapButton" to="." method="_on_slap_button_pressed"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
